Resolves: tdf#122168 width/height transposed

don't need it anyway, the width req is already set by SvxNumberPreview::SetDrawingArea

Change-Id: Ic5b03a13a98c76c5ce927b13fc295510b6d8686d